# pendle-pt-loop

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/backtest_aggressive_ltv/: equity_DynamicLoop_LTV0.84_N5.csv  equity_HoldUSDC.csv  equity_StaticLoop_LTV0.84_N5.csv
data/backtest_s7_real_lltv/: equity_HedgedLoop_LTV0.80_HR1.0.csv  equity_HoldPTNoLeverage.csv
data/backtest_susde_nov2025/: equity_HoldSUSDe.csv  equity_StaticLoop_LTV0.80_N5.csv
data/boros_validation/: boros_vs_hyperliquid.csv  summary.csv
data/multi_cycle/: bootstrap_ci.csv  out_of_sample.csv  results.csv  vol_stress.csv
docs/: LLMtranscript.md  Project2_Beamer.tex  extra_pr_plan.md  whitepaper.tex
scripts/: build_observations.py  multi_cycle_backtest.py  run_backtest.py  sweep_hedge_ratio.py  validate_boros_proxy.py
src/pendle_pt_loop/: __init__.py  costs.py  observations.py
src/pendle_pt_loop/entities/: __init__.py  morpho.py  pendle_pt.py
src/pendle_pt_loop/loaders/: __init__.py  boros.py  funding_hedge.py  morpho.py  pendle.py  susde_price.py
src/pendle_pt_loop/risk/: __init__.py  first_passage.py  ltv_controller.py
tests/: test_observations.py  test_smoke.py
tests/entities/: test_funding_hedge.py  test_morpho.py  test_pendle_pt.py
tests/loaders/: test_funding_hedge_loader.py  test_morpho_loader.py  test_pendle_loader.py  test_susde_price.py
tests/risk/: test_first_passage.py  test_ltv_controller.py
tests/strategies/: test_baselines.py  test_dynamic_loop.py  test_hedged_loop.py  test_static_loop.py
(+5 files in other folders)
