[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pendle-pt-loop"
version = "0.1.0"
description = "Leveraged Pendle PT carry strategy with dynamic LTV controller; backtested on fractal-defi"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [{ name = "qqmikhasik" }]
requires-python = ">=3.10,<3.14"
keywords = ["defi", "pendle", "morpho", "yield", "backtest", "fractal-defi"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "fractal-defi==1.3.1",
    # Lower bounds match fractal-defi 1.3.1 requirements; upper bounds left
    # open so pip's solver can satisfy upstream transitively.
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "requests>=2.33.1",
    "web3>=6.20",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "jupyter>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --strict-markers"

[tool.coverage.run]
source = ["pendle_pt_loop"]
omit = ["tests/*"]
